# guardkit-examples

./: .gitignore  LICENSE  README.md
fastapi-auth/: AUTH_API_GUIDE.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml  pytest.ini
fastapi-auth/.claude/: README.md  manifest.json  settings.json
fastapi-auth/.claude/agents/: clarification-questioner.md  fastapi-database-specialist-ext.md  fastapi-database-specialist.md  fastapi-database-specialist.md.bak  fastapi-specialist.md  fastapi-specialist.md.bak  fastapi-testing-specialist.md  fastapi-testing-specialist.md.bak
fastapi-auth/.claude/commands/: agent-enhance.md  agent-format.md  agent-validate.md  feature-plan.md  figma-to-react.md  mcp-zeplin.md  task-create.md  task-review.md  task-status.md  task-work.md  template-create.md  template-validate.md  zeplin-to-maui.md
fastapi-auth/.claude/reviews/: TASK-3665-security-review.md  TASK-REV-793C-review-report.md  TASK-REV-A7B2-review-report.md  TASK-REV-A7B2-review-report_security.md
fastapi-auth/.claude/rules/: code-style.md  testing.md
fastapi-auth/.claude/rules/api/: dependencies.md  routing.md  schemas.md
fastapi-auth/.claude/rules/database/: crud.md  migrations.md  models.md
fastapi-auth/.claude/rules/guidance/: database.md  fastapi.md  testing.md
fastapi-auth/.claude/task-plans/: TASK-3665-ARCHITECTURE-DIAGRAM.txt  TASK-3665-CODE-OUTLINE.md  TASK-3665-INDEX.txt  TASK-3665-README.md  TASK-3665-SUMMARY.md  TASK-3665-implementation-plan.md
fastapi-auth/.claude/templates/api/: router.py.template
fastapi-auth/.claude/templates/core/: config.py.template
fastapi-auth/.claude/templates/crud/: crud.py.template  crud_base.py.template
fastapi-auth/.claude/templates/db/: session.py.template
fastapi-auth/.claude/templates/dependencies/: dependencies.py.template
fastapi-auth/.claude/templates/models/: models.py.template
fastapi-auth/.claude/templates/schemas/: schemas.py.template
fastapi-auth/.claude/templates/testing/: conftest.py.template  test_router.py.template
fastapi-auth/docs/state/: current-sprint.md
fastapi-auth/requirements/: base.txt
fastapi-auth/src/: __init__.py  main.py
fastapi-auth/src/auth/: __init__.py  exceptions.py  router.py  schemas.py  service.py
fastapi-auth/src/core/: __init__.py  config.py  dependencies.py  schemas.py  security.py
fastapi-auth/src/db/: __init__.py  base.py  session.py
fastapi-auth/src/users/: __init__.py  crud.py  models.py  schemas.py
fastapi-auth/tasks/backlog/: TASK-3665-implement-jwt-user-login.md
fastapi-auth/tasks/in_review/: TASK-3665-implement-jwt-user-login.md  TASK-REV-A7B2-review-jwt-authentication-implementation.md
fastapi-auth/tests/: __init__.py  conftest.py
fastapi-auth/tests/e2e/: __init__.py  test_auth_workflow.py
fastapi-auth/tests/integration/: __init__.py  test_auth_router.py
fastapi-auth/tests/unit/: __init__.py  test_auth_service.py  test_security.py
kartlog/: .firebaserc  AI_CHAT_SETUP.md  FIREBASE_SETUP.md  README.md  firestore.indexes.json  firestore.rules  index.html  initial-specification.md  package-lock.json  package.json  vite.config.js  vitest.config.js
kartlog/.claude/: CLAUDE.md  manifest.json  settings.json
kartlog/.github/: copilot-instructions.md
kartlog/coverage/: clover.xml  coverage-final.json  index.html
kartlog/src/: App.svelte  app.css  main.js
kartlog/test/: .gitignore  run_chat.js  (+2 more)
(+134 files in other folders)
